fix bug  overflow in md preview

--- a/src/screens/Dashboard/style.module.css
+++ b/src/screens/Dashboard/style.module.css
@@ -5,7 +5,7 @@
 
 .editorInput{
     width:100%;
-    height: 50%;
+    height: 80%;
     resize:none;
     border:none;
     outline-color: #5463FF;
@@ -14,6 +14,11 @@
 
 .editorInput:focus{
     outline: none;
+}
+
+.wrapperMdPreview{
+    height: 100%;
+    overflow-y: auto;
 }
 
 @media only screen and (min-width: 900px) {
